tests/reference/asr-close_invalid_kwarg1-b38b499.stderr
semantic error: invalid argument: `end` supplied
 --> tests/errors/close_invalid_kwarg1.f90:5:5
  |
5 |     CLOSE(end=200)
  |     ^^^^^^^^^^^^^^
